fix(theme-default): fix kbd color in dark mode (#503)

--- a/packages/@vuepress/theme-default/src/client/styles/normalize.scss
+++ b/packages/@vuepress/theme-default/src/client/styles/normalize.scss
@@ -32,6 +32,7 @@ p a code {
 
 kbd {
   font-family: var(--font-family-code);
+  color: var(--c-text);
   background: var(--c-bg-lighter);
   border: solid 0.15rem var(--c-border-dark);
   border-bottom: solid 0.25rem var(--c-border-dark);
